<resources>
    <string name="app_name">WhiteAudio</string>
    <string name="subtitle">Запись и воспроизведение аудио</string>
    <string name="start_recording">Начать запись</string>
    <string name="stop_recording">Остановить запись</string>
    <string name="play_recording">Воспроизвести</string>
    <string name="stop_playing">Остановить воспроизведение</string>
    <string name="status_idle">Готов к записи</string>
    <string name="status_recording">Идет запись…</string>
    <string name="status_playing">Воспроизведение…</string>
    <string name="permission_required">Требуются разрешения для микрофона и хранилища</string>
</resources>